# test_mercafacil

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
app/: database.py  log.py  main.py
app/controller/: log.py  order.py  product.py  worker.py
app/model/: database.py  models.py
tests/: main.py
tests/controller/: test_controller_order.py  test_controller_product.py
